fix nav wrapping on small width

--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -128,6 +128,7 @@ a.subclass_toggle:hover {
     border-right: 1px solid var(--color-fg-100);
     font-size: 10pt;
     display: inline-block;
+    vertical-align: top;
 }
 
 #menubar .menuitem .home {
@@ -155,12 +156,6 @@ a.menu-link:hover {
 
 li.menuitem a.menu-link.home {
     padding-left: 2.5em;
-}
-
-#menubar .menuitem .home a {
-    /* The cube logo is actually *under* the <a>, but it shows through so that it looks like it
-    is part of the link. */
-    padding-left: 2em;
 }
 
 #menubar .menuitem .home a:hover {
